# docs/swagger.json
@@ -435,7 +435,7 @@
         },
         "/passenger/confirm": {
             "put": {
-                "description": "乘客对司机发出请求",
+                "description": "司机对接受到的订单,发出确认,注意,只能确认一个",
                 "consumes": [
                     "application/json"
                 ],
@@ -443,9 +443,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "passenger"
+                    "driver"
                 ],
-                "summary": "乘客确认",
+                "summary": "司机确认",
                 "parameters": [
                     {
                         "type": "string",
@@ -456,15 +456,15 @@
                     },
                     {
                         "type": "string",
-                        "description": "司机的id",
-                        "name": "driver_id",
+                        "description": "乘客的id",
+                        "name": "passenger_id",
                         "in": "path",
                         "required": true
                     }
                 ],
                 "responses": {
                     "200": {
-                        "description": "{\"msg\":\"success\",\"pid\":\"string\",\"did\":\"string\"}\" 如果成功,则发送给对应司机乘客的id",
+                        "description": "{\"msg\":\"success\",\"pid\":\"string\",\"did\":\"string\"}\" 如果成功,则将对应司机和乘客的订单存到匹配成功的数据库中,并且删除这两个订单请求.",
                         "schema": {
                             "$ref": "#/definitions/model.Res"
                         }
@@ -657,9 +657,9 @@
                 }
             }
         },
-        "/user/match/:pid/did": {
+        "/user/recommend": {
             "get": {
-                "description": "显示乘客和用户,在乘客或司机查看订单,进行确认的时候进行调用",
+                "description": "显示司机与乘客的匹配度和司机订单信息,在乘客查看订单,进行确认的时候进行调用",
                 "consumes": [
                     "application/json"
                 ],
@@ -677,20 +677,6 @@
                         "name": "token",
                         "in": "header",
                         "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Passenger_id",
-                        "name": "pid",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "driver_id",
-                        "name": "did",
-                        "in": "path",
-                        "required": true
                     }
                 ],
                 "responses": {
@@ -699,7 +685,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/model.Route"
+                                "$ref": "#/definitions/model.RequireDriver"
                             }
                         }
                     },
@@ -831,7 +817,7 @@
                 }
             },
             "post": {
-                "description": "注册新用户,通过一站式登录来注册",
+                "description": "注册新用户,通过一站式登录来注册,(添加信誉分score,初始注册时,每个用户都是100分)",
                 "consumes": [
                     "application/json"
                 ],
@@ -1043,6 +1029,63 @@
                     }
                 }
             }
+        },
+        "/users/report/:report_id": {
+            "put": {
+                "description": "用户举报别人",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user"
+                ],
+                "summary": "用户举报",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "token",
+                        "name": "token",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "用户举报别人,需要对应被举报人员的id",
+                        "name": "report_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{\"msg\":\"success\"}",
+                        "schema": {
+                            "$ref": "#/definitions/model.Res"
+                        }
+                    },
+                    "400": {
+                        "description": "{\"error_code\":\"00001\", \"message\":\"Fail.\"} or {\"error_code\":\"00002\", \"message\":\"Lack Param Or Param Not Satisfiable.\"}",
+                        "schema": {
+                            "$ref": "#/definitions/handler.Error"
+                        }
+                    },
+                    "401": {
+                        "description": "{\"error_code\":\"20001\", \"message\":\"Fail.\"} 举报失败",
+                        "schema": {
+                            "$ref": "#/definitions/handler.Error"
+                        }
+                    },
+                    "500": {
+                        "description": "{\"error_code\":\"30001\", \"message\":\"Fail.\"} 失败",
+                        "schema": {
+                            "$ref": "#/definitions/handler.Error"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -1087,6 +1130,39 @@
                     "type": "string"
                 },
                 "sid": {
+                    "type": "string"
+                }
+            }
+        },
+        "model.RequireDriver": {
+            "type": "object",
+            "properties": {
+                "driver_id": {
+                    "type": "string"
+                },
+                "end_time": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "notes": {
+                    "type": "string"
+                },
+                "passing_spots": {
+                    "type": "string"
+                },
+                "start_spot": {
+                    "type": "string"
+                },
+                "start_time": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "integer"
+                },
+                "ymd": {
+                    "description": "年月日",
                     "type": "string"
                 }
             }
@@ -1150,6 +1226,9 @@
                 },
                 "picture": {
                     "type": "string"
+                },
+                "score": {
+                    "type": "integer"
                 }
             }
         },
@@ -1272,6 +1351,9 @@
                 },
                 "picture": {
                     "type": "string"
+                },
+                "score": {
+                    "type": "integer"
                 }
             }
         }
