# handler/user/comment.go
@@ -49,3 +49,47 @@ func UsersComment(c *gin.Context) {
 		"msg": "success",
 	})
 }
+
+//新增举报功能
+// @Summary 用户举报
+// @Description 用户举报别人
+// @Tags user
+// @Accept json
+// @Produce json
+// @Param token header string true "token"
+// @Param report_id path string true "用户举报别人,需要对应被举报人员的id"
+// @Success 200 {object} model.Res "{"msg":"success"}"
+// @Failure 401 {object} handler.Error "{"error_code":"20001", "message":"Fail."} 举报失败
+// @Failure 400 {object} handler.Error "{"error_code":"00001", "message":"Fail."} or {"error_code":"00002", "message":"Lack Param Or Param Not Satisfiable."}"
+// @Failure 500 {object} handler.Error "{"error_code":"30001", "message":"Fail."} 失败"
+// @Router /users/report/:report_id [put]
+func Report(c *gin.Context) {
+	report_id := c.Query("report_id")
+	var token *model.JwtClaims
+	var s string
+	s = c.GetHeader("token")
+	//fmt.Println(s)
+	token, err2 := model.VerifyToken(s)
+	//fmt.Println(token)
+	if err2 != nil {
+		handler.ErrTokenInvalid(c, err2)
+		return
+	}
+	uid := token.UID
+	_, err := model.FindUser(uid)
+	if err != nil {
+		handler.ErrServerError(c, err)
+		return
+	}
+
+	err3 := model.Deduct(report_id)
+	if err3 != nil {
+		//举报失败
+		handler.ErrBadRequest(c, err3)
+		return
+	}
+
+	c.JSON(200, gin.H{
+		"msg": "success",
+	})
+}
